--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.21)
 project(c_jam C)
 
+add_compile_definitions(CUTE_TILED_IMPLEMENTATION)
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
 find_package(SDL2 REQUIRED)
@@ -9,6 +10,7 @@ find_package(SDL2_IMAGE REQUIRED)
 include_directories(
         ${SDL2_INCLUDE_DIR}
         ${SDL2_IMAGE_INCLUDE_DIR}
+        ${PROJECT_SOURCE_DIR}/vendor
 )
 
 set(CMAKE_C_STANDARD 99)
