--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,12 +10,13 @@ find_package(SDL2_IMAGE REQUIRED)
 include_directories(
         ${SDL2_INCLUDE_DIR}
         ${SDL2_IMAGE_INCLUDE_DIR}
-        ${PROJECT_SOURCE_DIR}/vendor
 )
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(c_jam main.c game/game.c)
+add_executable(c_jam main.c game/game.c render/image.c game/scene.c game/player.c)
+
+target_include_directories(c_jam PRIVATE ${PROJECT_SOURCE_DIR})
 
 # Set the link libraries
 target_link_libraries(
@@ -23,3 +24,5 @@ target_link_libraries(
         ${SDL2_LIBRARY}
         ${SDL2_IMAGE_LIBRARY}
 )
+
+file(COPY assets DESTINATION .)
